# AEGIS-prismatic26

./: .env.example  .gitignore  AEGIS_Full_Prototype_Build_Spec.md  README.md  docker-compose.yml  implementation_plan.md
backend/: alembic.ini  debug_http.py  debug_pipeline.py  pyproject.toml  test_pipeline.py
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py  router.py
backend/app/api/v1/: __init__.py  alerts.py  dashboard.py  health.py  incidents.py  memory.py  pcap.py  reports.py  scenarios.py
backend/app/core/: __init__.py  config.py  database.py  logging.py  redis.py
backend/app/models/: __init__.py  audit_log.py  correlation_match.py  incident.py  incident_alert_link.py  incident_summary.py  normalized_alert.py  raw_alert.py  types.py
backend/app/schemas/: __init__.py  alert_ingest.py  dashboard.py  incident.py  normalized_alert.py  summary.py
backend/app/services/: __init__.py  classification_service.py  correlation_service.py  ingestion_service.py  memory_service.py  normalization_service.py  pcap_service.py  rca_service.py  report_service.py  scenario_service.py  scoring_service.py  summary_service.py
backend/app/tests/: __init__.py  test_cowrie_adapter.py  test_scoring.py
backend/app/utils/: __init__.py  datetime.py  fingerprints.py
backend/app/workers/: __init__.py  correlate_worker.py  normalize_worker.py  queue.py  summary_worker.py
backend/pcap_uploads/: 5437b2ee9c46cd95_test_sample.pcap  fa619260be8c62d3_pcap_log4shell_cve2021_44228_java_serialized_2022-05-13045800.pcapng
(+45 files in other folders)
